# OpenGLPlayground

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/glad/: glad.c  glad.h
include/toolkit/: window.cc  window.h
src/: CMakeLists.txt  main.cc
src/1.1_Hello_Win_Clear/: CMakeLists.txt  main.cc
src/1.2_Hello_Triangle/: CMakeLists.txt  main.cc
src/1.2_Hello_Triangle_Exc1/: CMakeLists.txt  main.cc
src/1.2_Hello_Triangle_Exc2/: CMakeLists.txt  main.cc
src/1.2_Hello_Triangle_Exc3/: CMakeLists.txt  main.cc
src/1.2_Hello_Triangle_Indexed/: CMakeLists.txt  main.cc
